--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Leslie Sanders</h1>
-        <p>QA Analyst | Web Developer</p>
+        <header>
+  <img src="ls-logo.png" alt="LS Logo" style="width: 100px; border-radius: 50%;">
+  <h1>Leslie Sanders</h1>
+  <p>QA Tester | Web Developer</p>
+</header>
+
     </header>
     <nav>
         <a href="#about">About</a>
