--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <header>
   <img src="ls-logo.png" alt="LS Logo" style="width: 100px; border-radius: 50%;">
   <h1>Leslie Sanders</h1>
+            <img src="profile.jpg" alt="Leslie Sanders" style="width: 120px; border-radius: 50%; margin-top: 1em;">
+
   <p>QA Tester | Web Developer</p>
 </header>
 
