--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <h2>Contact</h2>
         <p>Email: LeslieeTheTester@gmail.com</p>
         <p>LinkedIn: <a href="https://linkedin.com/in/lsanders7">lsanders7</a></p>
-        <p><a href="Leslie_Sanders_Resume.pdf" target="_blank">📄 View My Resume</a></p>
+        <p><a href=“Leslie_Sanders_Resume.pdf" target="_blank">📄 View My Resume</a></p>
+
         
 
     </section>
