--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <ul>
             <li>QA Test Cases Repo</li>
             <li>Portfolio Website (this site!)</li>
+            <li><a href="https://github.com/LeslieSanders/qa-test-cases" target="_blank">🧪 QA Test Cases – SauceDemo</a></li>
+
         </ul>
     </section>
     <section id="contact">
